Added Jenkinsfile